--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.6.4
 djangorestframework-jwt==1.11.0
 drfdocs==0.0.11
 olefile==0.44
+pep8==1.7.0
 Pillow==4.2.1
 PyJWT==1.5.3
 pytz==2017.2
